--- a/client/src/App.css
+++ b/client/src/App.css
@@ -888,3 +888,25 @@ background-color: var(--white-color);
 .scroll-down.ws i:hover{
     color: var(--blue-color);
 }
+
+.profile-picture{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.profile-picture img, .profile-picture div{
+    border-radius: 50%;
+    height: 100px;
+    width: 100px;
+    border: 5px solid var(--blue-color);
+    color: var(--blue-color);
+}
+
+.profile-picture div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 50px;
+    background-color: var(--yellow-color);
+}
