--- a/client/src/App.css
+++ b/client/src/App.css
@@ -265,6 +265,11 @@ p{
     padding: 20px 0;
     padding-right: 50px;
     text-decoration: underline;
+    transition: all 0.5s;
+}
+
+.forgot-link:hover{
+    color: var(--dark-yellow-color);
 }
 
 .inputs label {
@@ -1045,4 +1050,32 @@ div.profile-details{
 
 .profile-details-span .camera:hover{
     opacity: 1;
+}
+
+.forgot-msg{
+    padding: 0px 20px;
+}
+
+.disabled,.disabled+input{
+    opacity: 0.7;
+}
+.circle-span{
+    display: inline-block;
+    height: 13px;
+    width: 13px;
+    border: 2px solid var(--black-color);
+    border-left: 2px solid var(--white-color);
+    animation: rotate 1s infinite linear;
+    border-radius: 50%;
+    margin-right: 5px;
+    position: relative;
+}
+
+@keyframes rotate {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
 }
