--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1057,9 +1057,26 @@ div.profile-details{
     padding: 0px 20px;
 }
 
-.disabled,.disabled+input{
+.person-list .disabled,.disabled+input{
     opacity: 0.7;
 }
+
+
+.fa-regular.fa-circle-user.icon-disabled{
+    cursor: default;
+    transition: all 0ms;
+}
+
+.fa-solid.fa-plus.icon-disabled2{
+    cursor: default;
+    opacity: 0;
+    transition: all 0ms;
+}
+
+.fa-regular.fa-circle-user.icon-disabled:hover{
+    color: var(--blue-color);
+}
+
 .circle-span{
     display: inline-block;
     height: 13px;
